fix(StreamsList): add scroll when episode picker is shown on landscape orientation on mobile

--- a/src/routes/MetaDetails/StreamsList/styles.less
+++ b/src/routes/MetaDetails/StreamsList/styles.less
@@ -22,6 +22,10 @@
         padding: 1rem;
         overflow-y: auto;
 
+        .search {
+            flex: none;
+        }
+
         .image {
             flex: none;
             width: 10rem;
